--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "ownerid": "<@!254542844197470209>",
   "owner": "254542844197470209",
   "scripts": {
-    "start": "node senkoCore.js"
+  "start": "nohup node main.js > log.txt 2>&1 & echo $! > pid.txt",
+  "stop": "kill $(tail pid.txt)",
   },
   "repository": {
     "type": "git",
