--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
   "author": "Cappuchino",
   "license": "ISC",
   "dependencies": {
+    "better-sqlite-pool": "^0.1.2",
     "discord.js": "^11.2.1",
     "discord.js-commando": "^0.10.0",
-    "enmap": "^3.1.4",
+    "enmap": "4.0.12",
     "ms": "^2.1.1"
   }
 }
