--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "discord.js": "^11.2.1",
     "discord.js-commando": "^0.10.0",
     "enmap": "^3.1.4",
+    "mongoose": "^5.2.13",
     "ms": "^2.1.1"
   }
 }
